--- a/.github/workflows/3d-profile.yml
+++ b/.github/workflows/3d-profile.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: BinaryStudio8
+          USERNAME: BinaryForgeX
 
       - name: Commit & Push
         run: |
